# Rhea

./: .buildinfo  .gitignore  Dockerfile  Jenkinsfile  Makefile  Notes.md  README.md  example_model.pt  genindex.html  index.html  loss.txt  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js
.github/workflows/: deploy.yaml
_sources/: index.rst.txt
_sources/autoapi/: index.rst.txt
autoapi/: index.html
autoapi/box3d/: index.html
autoapi/conf/: index.html
autoapi/convert_model_to_cpu/: index.html
autoapi/create_database/: index.html
autoapi/example_use_model/: index.html
autoapi/generate/: index.html
cpp_interface/: .gitignore  CMakeLists.txt  FFISubgridModel.h  Makefile  build_test_torch_model.sh  model_cpu.ptc  model_cuda.ptc  sample_model.ptc  test_torch_model.cpp
growth_rate/: example_use_model.py  model_physical_error.py  train_model.py
jmcguig_tests/: run_many_models.py
model_training/: .gitignore  1_create_database.py  box3d.py  box3d_heuristic.py  convert_model_to_cpu.py  create_database.py  custom_dataset.py  delete_unfinished.py  example_use_model.py  get_current_lr.py  launch_syne_tune.py  ml_constants.py  ml_e3nn.py  ml_evaluate.py  ml_evaluate_stability.py  ml_generate.py  ml_loss.py  ml_maxentropy.py  ml_neuralnet.py  ml_optimizer.py  ml_plot.py  ml_pytorch.py  ml_read_data.py  ml_sklearn.py  ml_stability.py  ml_tools.py  ml_trainmodel.py  quickplot.py  run_trial.py
scripts/: plot_losses.py
stability_model/: F1_score.py  example_use_model.py  generate_training_data.py  train_model.py  use_model.py  utils.py
(+46 files in other folders)
